prefer getDeclaredConstructor().newInstance() instead of class.newInstance()
---
Class.newInstance() bypasses exception checking;